replication/sutra-replication-package/sdk/sutra-compiler/tests/corpus/invalid/01_var_with_type.su
// Expected error: AKA0103 - `var` combined with explicit type.
// The syntax-decisions doc is explicit: never `var vector x`.

function void Bad() {
    var vector x = embed("cat");
}
